Brand > Explore : Location name overflow problem solved

--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -74,6 +74,9 @@
 
 .brands-explore-content-wrapper .influencer-address {
     font-size: 13px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .influencer-data {
